--- a/schedule.ini
+++ b/schedule.ini
@@ -7,3 +7,9 @@ command = peeringdb sync
 schedule = 0 43 * * * *
 container = luje-mailer-1
 command = dotnet LUJEWebsite.Mailer.dll
+
+[job-exec "peering"]
+schedule = 0 0 * * * *
+container = luje-peering-1
+command = dotnet LUJEWebsite.PeeringGenerator.dll
+
